...
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                        <EditText
                            android:layout_gravity="center"
                            android:inputType="textPersonName"
                            android:id="@+id/edit_text_name_register"

                            android:layout_width="170dp"
                            android:layout_height="40dp"

                            android:hint="@string/txt_name"
                            android:textColor="@color/textRegisterColor"
...

            android:layout_gravity="center">

                <EditText

                    android:inputType="textPersonName"
                    android:id="@+id/edit_text_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:hint="@string/txt_email"
                    android:textColor="@color/textRegisterColor"
                    android:textColorHint="@android:color/black"
...
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edit_text_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:maxLength="16"
                    android:hint="@string/txt_password"
                    android:textColor="@color/textRegisterColor"
...
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edit_text_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/txt_confirm_password"
                    android:textColor="@color/textRegisterColor"
                    android:textColorHint="@android:color/black"
...
            android:layout_height="45dp"

            android:text="@string/btn_signup"
            android:textColor="#fff"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_register_button"
            android:id="@+id/sign_up_button"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
...
