...
    <string name="addition">Acréscimo</string>
    <string name="sizegroups">Tamanho dos grupos</string>
    <string name="msg_len_size_group_error_message">O tamanho do grupo nao pode ser zero.</string>
    <string name="msg_len_addition_error_message">O acrescimo nao pode ser zero.</string>
    <string name="msg_len_cut_off_error_message">A nota de corte nao pode ser zero.</string>

    <string name="msg_signup_success">Usuário cadastrado com sucesso!</string>
    <string name="msg_class_success">Sucesso</string>
    <!-- Login -->
    <string name="facebook_app_id">2113304315624784</string>
    <string name="sign_up_text">Cadastrar</string>
    <string name="already_sign_up"> <u> Já sou cadastrado </u></string>
    <string name="error_login">Ocorreu um erro ao entrar</string>
...
